<resources>
    <string name="app_name">ViniloApp</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">Login failed</string>}
    <string name="album_name">Nombre del album</string>
    <string name="album_description">"Descripción del album</string>
    <string name="coleccionista">Coleccionista</string>
    <string name="usuario">Usuario</string>
    <string name="username">"Nombre de usuario</string>
    <string name="hello_album_fragment">Sección de Albums</string>
    <string name="action_ingresar">Ingresar</string>
    <string name="title_albums">Título del Album</string>
    <string name="action_settings">Configuración</string>

    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="collector_name_placeholder">Nombre del coleccionista</string>
    <string name="collector_email_placeholder">Correo del coleccionista</string>
    <string name="collector_phone_placeholder">Número telefónico</string>
    <string name="comment_rating_placeholder">##</string>
    <string name="comment_description_placeholder">Descripción del comentario</string>
    <string name="album_name_placeholder">Nombre del album</string>
    <string name="album_description_placeholder">Descripcion del album</string>
    <string name="txt_no_comments">No hay comentarios para este álbum</string>
    <string name="title_collectors">Coleccionistas</string>
    <string name="title_comments">Comentarios del álbum</string>
    <string name="title_tracks">Comentarios del álbum</string>
    <string name="nameAlbum">Nombre del álbum</string>
    <string name="cover">Url cubierta álbum</string>
    <string name="releaseDate">Fecha de lanzamiento</string>
    <string name="description">Descripción</string>
    <string name="genre">Genero</string>
    <string name="recordLabel">Record Label</string>
    <string name="submit">Guardar</string>
    <string name="crear_album">Agregar Album</string>
    <string name="txt_no_tracks">no hay tracks</string>
    <string name="duration">Duracion</string>
    <string name="name">Nombre</string>

    <string name="performer_name">Nombre del músico</string>
    <string name="title_performer">Artista</string>
    <string name="crear_performer">Crear Artista</string>
    <string name="birthdate">Fecha Nacimiento</string>
</resources>